2017-05-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (main): Fix segmentation fault.

2017-05-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdiff, ftgrid, ftview] Make autohint warping NORMAL option.

	* src/ftdiff.c (render_state_draw, event_help): Updated.
	* src/ftgrid.c (event_help, event_warping_change): Updated.
	* src/ftview.c (event_help, event_warping_change, write_header):
	Updated.

2017-05-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring, ftview] Loosely match bitmap font sizes.

	* src/ftcommon.c (FTDemo_Set_Current_Size,
	FTDemo_Set_Current_Charsize): Round requested size to the closest
	available ppem for bitmap fonts.

	* src/ftview.c (Render_Waterfall): Simplify accordingly.
	(write_header): Highlight ppem that does not match the point size.

	* src/ftstring.c (write_header): Report ppem.

2017-05-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (Render_Stroke): Fix segmentation fault.

2017-05-13  Werner Lemberg  <wl@gnu.org>

	* Version 2.8 released.
	=======================


	Tag sources with `VER-2-8.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect.pro: Updated.

2017-05-11  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp: Don't include `cstdint', which is C++11.

	Right now, we still want to be able to compile with older C++
	compilers.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Check glyph index before discarding sign.

	* src/ftinspect.cpp (Engine:glyphName, Engine::loadOutline): Do it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	* src/ftinspect.cpp (GlyphPointNumbers::paint): Fix `ptIdx' type.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Mark float literals as float.

	* src/ftinspect.cpp (GlyphPointNumbers::paint): Do it.

2017-05-11  Philipp Kerling  <pkerling@casix.org>

	[ftinspect] Insert explicit casts where warranted.

	This avoids compiler warnings.

	* src/ftinspect.cpp (Engine::numberOfNamedInstances,