@@ -524,62 +524,12 @@
   static void
   write_header( FT_Error  error_code )
   {
-    FT_Face      face;
-    const char*  basename;
-    double       ppem = 0.0;
+    FTDemo_Draw_Header( handle, display, status.ptsize, status.res,
+                        status.gamma, error_code );
 
-
-    error = FTC_Manager_LookupFace( handle->cache_manager,
-                                    handle->scaler.face_id, &face );
-    if ( error )
-      PanicZ( "can't access font file" );
-
-    if ( !status.header )
-    {
-      basename = ft_basename( handle->current_font->filepathname );
-
-      switch ( error_code )
-      {
-      case FT_Err_Ok:
-        sprintf( status.header_buffer,
-                 "%.50s %.50s (file `%.100s')", face->family_name,
-                 face->style_name, basename );
-
-	if ( FT_IS_SCALABLE( face ) )
-          ppem = FT_MulFix( face->units_per_EM,
-                            face->size->metrics.y_scale ) / 64.0;
-        else
-          ppem = (double)face->size->metrics.y_ppem;
-
-        break;
-
-      case FT_Err_Invalid_Pixel_Size:
-        sprintf( status.header_buffer, "Invalid pixel size (file `%.100s')",
-                 basename );
-        break;
-
-      case FT_Err_Invalid_PPem:
-        sprintf( status.header_buffer, "Invalid ppem value (file `%.100s')",
-                 basename );
-        break;
-
-      default:
-        sprintf( status.header_buffer, "File `%.100s': error 0x%04x", basename,
-            (FT_UShort)error_code );
-        break;
-      }
-
-      status.header = status.header_buffer;
-    }
-
-    grWriteCellString( display->bitmap, 0, 0,
-                       status.header, display->fore_color );
-
-    sprintf( status.header_buffer,
-             "at %g points (%.4g ppem), angle = %d, gamma = %g",
-             status.ptsize / 64.0, ppem, status.angle, status.gamma );
-    grWriteCellString( display->bitmap, 0, CELLSTRING_HEIGHT,
-                       status.header_buffer, display->fore_color );
+    if ( status.header )
+      grWriteCellString( display->bitmap, 0, 2 * HEADER_HEIGHT,
+                         status.header, display->fore_color );
 
     grRefreshSurface( display->surface );
   }
